fix space item click and spacing

--- a/frontend/src/component/FeedItem/FeedItemHeader.styl
+++ b/frontend/src/component/FeedItem/FeedItemHeader.styl
@@ -47,7 +47,7 @@
       & .iconbutton__text
         padding 0
   & .profileNavigation
-    max-width 100px
+    max-width 110px
   & .breadcrumbs
     position relative
     top 0
