--- a/frontend/src/css/FeedItemWithPreview.styl
+++ b/frontend/src/css/FeedItemWithPreview.styl
@@ -23,7 +23,7 @@ smallScreenFeedWidth = 400px
     margin standardSpacing 0 0
   &__timeline
     &__messagelist
-      padding 0
+      padding standardSpacing 0
   &__publication
     &__messagelist__item
       margin-bottom 0
