--- a/frontend_lib/src/component/Timeline/Timeline.styl
+++ b/frontend_lib/src/component/Timeline/Timeline.styl
@@ -40,7 +40,6 @@
     padding standardSpacing
     border-radius standardBorderRadius
     align-self flex-end
-    margin-top textSpacing
     & > i
       margin-inline-end textSpacing
     &:hover
